fixing layout issues

--- a/src/style.css
+++ b/src/style.css
@@ -60,6 +60,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding: 2rem;
 }
 .header .logo {
     font-size: 2.5rem;
@@ -111,6 +112,7 @@ main .title:hover {
     color: white;
     margin-block: 3rem;
     position: relative;
+    padding-top: 20rem;
 }
 .footer .icons {
     margin-bottom: 20px;
@@ -185,7 +187,7 @@ footer.credit a {
     }
     main {
         padding-top: 20rem;
-        margin-top: 15rem;
+        margin-top: 20rem;
         display: flex;
         flex-wrap: wrap;
         align-items: center;
@@ -195,7 +197,7 @@ footer.credit a {
         align-items: center;
         justify-content: center;
         font-size: 3rem;
-        margin: 6rem auto;
+        margin-top: 6rem auto;
         text-align: center;
     }
     .title .subtitle {
@@ -203,5 +205,14 @@ footer.credit a {
         margin: 1.5rem auto;
         font-size: 16px;
         color: var(--blue);
+    }
+    .footer {
+        width: 100%;
+        margin: 0 auto;
+        text-align: center;
+        color: white;
+        margin-block: 2rem;
+        position: relative;
+        padding-top: 15rem;
     }
 }
